# jupyterbook.pub

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEVELOPMENT.md  Dockerfile  LICENSE  Procfile  README.md  dokku.bash  pyproject.toml
.github/: SUPPORT.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-question.yml  03-feature-request.yml  config.yml
.github/workflows/: docs.yml  release.yml  test.yml
chart/: Chart.yaml  values.yaml
chart/mounted-files/: jupyterbook_pub_config.py
chart/templates/: _helpers-labels.tpl  _helpers-names.tpl  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
deploy_config/: binderlite.py  jupyterbook.py
docs/: app.rst  builder.rst  conf.py  executor.rst  index.rst
js/: .sassrc.js  .sassrc.mjs  package-lock.json  package.json  vite.config.js
js/src/: App.css  App.tsx  LinkGenerator.tsx  index.html  index.js  index.scss  index.tsx  resolver.ts  siteconfig.ts
src/jupyterbook_pub/: __init__.py  app.py  builder.py  cache.py  executor.py  storage.py  utils.py
src/jupyterbook_pub/builder/: base.py  book.py  lite.py
src/jupyterbook_pub/builders/: base.py  book.py  lite.py
src/jupyterbook_pub/static/: index.js
src/jupyterbook_pub/templates/: home.html
