################################################################################
# Build Configuration
################################################################################

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-vcs"]

################################################################################
# Project Configuration
################################################################################

[project]
name = "jupyterbook_pub"
# You can chose to use dynamic versioning with hatch or static where you add it manually.
dynamic = ["version"]
description = "Automatically render JupyterBooks from published locations"
authors = [
    { name = "Yuvi", email = "yuvipanda@gmail.com" },
]
license = "BSD-3-Clause"
requires-python = ">= 3.10" # Adjust based on the minimum version of Python that you support
readme = {"file" = "README.md", "content-type" = "text/markdown"}
# Please consult https://pypi.org/classifiers/ for a full list.
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
# TODO: add keywords
keywords = []
# TODO: add dependencies
dependencies = [
    "tornado",
    "repoproviders",
    "jinja2"
]

[project.urls]
Homepage = "https://github.com/yuvipanda/jupyterbook.pub"
"Source Code" = "https://github.com/yuvipanda/jupyterbook.pub"
"Bug Tracker" = "https://github.com/yuvipanda/jupyterbook.pub/issues"
Documentation = "https://github.com/yuvipanda/jupyterbook.pub/blob/main/README.md"
Download = "https://pypi.org/project/jupyterbook.pub/#files"

[project.optional-dependencies]
# The groups below should be in the [development-groups] table
# They are here now because hatch hasn't released support for them but plans to
# in Mid November 2025.
dev = [
    "hatch",
    "pre-commit",
    "jupyterbook_pub[docs,types]",
]

docs = [
]

build = [
    "pip-audit",
    "twine",
]
types = [
    "mypy",
]


################################################################################
# Tool Configuration
################################################################################

# Hatch is building your package's wheel and sdist
# This tells hatch to only include Python packages (i.e., folders with __init__.py) in the build.
# read more about package building, here:
# https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-distribution-files-sdist-wheel.html
[tool.hatch.build]
only-packages = true

# This tells Hatch to build the package from the src/ directory.
# Read more about src layouts here: https://www.pyopensci.org/python-package-guide/package-structure-code/python-package-structure.html
[tool.hatch.build.targets.wheel]
packages = ["src/jupyterbook_pub"]


[tool.hatch.build.hooks.vcs]
version-file = "src/jupyterbook_pub/_version.py"

[tool.hatch.version]
source = "vcs"


# TODO: Adjust mypy configuration.
#[tool.mypy]
#plugins = [
#    "pydantic.mypy",
#]

# Stop mypy from complaining about missing types from imports.
#[[tool.mypy.overrides]]
#module = [
#    "pandas",
#]
#ignore_missing_imports = true

#[tool.pydantic-mypy]
#init_forbid_extra = true
#init_typed = true
#warn_required_dynamic_aliases = true
